# Coding-Interview

./: .gitignore  binary_tree_preoder_transversal.py  first_unique_character_in_string.py  pyproject.toml  remove_duplicates_sorted_array.py  remove_element.py  reverse_words.py  rotate_array.py  rotate_image.py  spiral_matrix.py  two_sum.py  word_pattern.py
Algorithm/: array_search.py  array_sort.py  bst_find_nearest_neighbors.py  first_unique_character_in_string.py  is_balanced_parathenses.py  is_straight_line.py  is_subsequent.py  last_digits_count.py  remove_duplicates_sorted_array.py  remove_element.py  reverse_linked_list.py  spiral_matrix.py  spiral_matrix2.py  word_pattern.py
Data-Structure/: array_min_heap.py  binary_min_heap.py  binary_search_tree.py  double_linked_list.py  graph.py  graph2.py  linked_list_2.py  max_heap.py  queue.py  queue2.py  single_linked_list.py  stack.py  stack2.py  tree.py  tree_DFS_BFS.py
Design-Pattern/: README.md
Design-Pattern/Exercise Files/02_02/02_02e/: builder.py
Mini-Project/Git-Commands/: test.txt
Mini-Project/LSTM-Model/: lstm.py  poc.ipynb
Mini-Project/NLP/: tf_text_classification.ipynb
Mini-Project/Pytorch/: best_classification_model.pth  classification.ipynb  linear_regression.ipynb
Mini-Project/Sklearn/: california_housing.ipynb  classification.ipynb  multiple_class_classification.ipynb  regression.ipynb  titanic.ipynb
Mini-Project/Time-Series-Pred/: main.py  poc.ipynb
OOP/: library.py  poc_pydantic.py  pyproject.toml
Python/: async_more.py  iterator_vs_generator.py  reivew_collections.py  sync_vs_async.py
SQL/: 1070-product-sales-analysis.sql  1164-produce-price-at-given-date.sql  1251-avg-selling-price.sql  1378-replace-employee-id-with-unique-id.sql  1731-number-of-employee-reporting-to-each-employee.sql  1757-recycleable-and-low-fat-products.sql  1789-primary-department-for-each-employee.sql  1978-employees-whose-manager-left-company.sql  570-mangers-with-min-5-reports.sql  584-find-customer-referee.sql  595-big-countries.sql  620-not-boring-movies.sql
SQL/product-sales/: create.sql  product_sales.db  queries.sql  seed.sql
